--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ li {
 }
 
 .nav-container {
-  margin-bottom: 100px;
+  margin-bottom: 70px;
 }
 
 .icon {
@@ -19,4 +19,8 @@ hr {
 
 ul {
   margin-bottom: 2rem;
+}
+
+.mb-3, .my-3 {
+	margin-bottom: 2px !important;
 }
