--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,32 @@ hr {
 
 ul {
   margin-bottom: 2rem;
+  padding-left: 8px;
 }
 
 .mb-3, .my-3 {
 	margin-bottom: 2px !important;
 }
+
 .opisi {
 	margin-left: 5px; color: #ccc;
+}
+
+.nav-link {
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+}
+
+.navbar-toggler {
+  margin-bottom: 10px;
+}
+
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.show {
+  color: #007bff;
+}
+
+.navbar-light .navbar-nav .nav-link.active {
+  color: #fff;
 }
