--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ li {
 
 .icon {
   width: 16px;
-  margin-right: 5px;
+  margin-right: 4px;
 }
 
 hr {
@@ -23,11 +23,12 @@ ul {
 }
 
 .mb-3, .my-3 {
-	margin-bottom: 2px !important;
+  margin-bottom: 2px !important;
 }
 
 .opisi {
-	margin-left: 5px; color: #ccc;
+  margin-left: 5px;
+  color: #ccc;
 }
 
 .nav-link {
@@ -39,18 +40,8 @@ ul {
   margin-bottom: 10px;
 }
 
-.navbar-light .navbar-nav .nav-link,
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.show {
-  color: #007bff;
-}
-
-.navbar-light .navbar-nav .nav-link.active {
-  color: #fff;
-}
-
 .footer {
-  background-color: #daffe5;
+  background-color: #e2e6e9;
   min-height: 47px;
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
@@ -68,15 +59,19 @@ ul {
   .footer {
     position: static !important;
   }
+
   .main {
     margin-bottom: 0;
   }
+
   .navbar-nav {
     margin-top: 10px;
   }
+
   .nav-link {
     padding: 4px;
   }
+
   #pills-tabContent {
     margin-top: 16px;
   }
@@ -88,12 +83,44 @@ ul {
   }
 }
 
+@media (min-width: 767.98px) {
+  .nav-link {
+    padding: 0;
+  }
+}
+
+nav {
+  background-color: #3e474f;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #d8ddde;
+  transition: 0.2s;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  background-color: #29a847;
+}
+
+.navbar-dark .navbar-nav .nav-link.show {
+  color: #d8ddde;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #fff;
+}
+
+.navbar-dark .navbar-nav .nav-link.active {
+  color: #fff;
+  border-radius: 20px;
+}
+
 .nav li {
   margin: 0;
 }
 
 ul.nav {
-	text-align: center;
+  text-align: center;
 }
 
 html {
@@ -101,7 +128,7 @@ html {
 }
 
 .navbar-toggler {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .navbar-collapse {
@@ -112,6 +139,12 @@ html {
   justify-content: center;
 }
 
-.nav-link {
-  padding: 0;
+.tab-pane a {
+  text-decoration: none;
+  padding: 0 5px;
+}
+
+.tab-pane a:hover {
+  background-color: #e2e6e9;
+  border-radius: 20px;
 }
