--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,11 @@ ul {
 	text-align: center;
 	padding-left: 0px;
   }
+  
+  .fa-lg {
+   margin-right: 5px;
+   margin-left: 5px;  
+  }
 }
 
 @media (min-width: 767.98px) and (max-width: 1304px) {
