--- a/css/main.css
+++ b/css/main.css
@@ -74,15 +74,15 @@ ul {
   #pills-tabContent {
     margin-top: 16px;
   }
-  
+
   .kolobok {
-	text-align: center;
-	padding-left: 0px;
+    text-align: center;
+    padding-left: 0px;
   }
-  
+
   .fa-lg {
-   margin-right: 5px;
-   margin-left: 5px;  
+    margin-right: 5px;
+    margin-left: 5px;
   }
 }
 
@@ -96,11 +96,13 @@ ul {
   .nav-link {
     padding: 0;
   }
+
   .kolobok {
-   padding-left: 8px;
+    padding-left: 8px;
   }
+
   .fa-lg {
-  margin-right: 10px;
+    margin-right: 10px;
   }
 }
 
@@ -164,4 +166,6 @@ html {
   border-radius: 20px;
 }
 
-
+.footer-col {
+  align-self: center;
+}
