--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 li {
   list-style-type: none;
-  margin: 6px;
+  margin: 5px;
 }
 
 .main {
@@ -17,6 +17,7 @@ li {
   vertical-align: bottom;
   margin-right: 1px;
   margin-left: 1px;
+  margin-bottom: 2px;
 }
 
 .pict-menu {
@@ -24,8 +25,8 @@ li {
 }
 
 hr {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0.2rem;
+  margin-bottom: -0.2rem;
 }
 
 ul {
