--- a/includes/index.pug
+++ b/includes/index.pug
@@ -296,16 +296,16 @@ block content
           li
             div.icon.rutracker.org
             a(href='https://rutracker.org/', target='_blank') rutracker.org
-            div.icontooinfo.a0Torrent1(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.nnmclub.to
             a(href='http://nnmclub.to/', target='_blank') nnmclub.to
             div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
-            div.icontooinfo.a0Torrent1(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.filmitorrent
             a(href='http://filmitorrent.xyz/', target='_blank') filmitorrent_TOP
-            div.icontooinfo.a0Torrent1(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.bible-teka.com
             a(href='https://bible-teka.com/', target='_blank') bible-teka
