--- a/includes/media.pug
+++ b/includes/media.pug
@@ -141,8 +141,8 @@ block content
           li
             div.icon.nnmclub.to
             a(href='http://nnmclub.to/forum/portal.php?c=25', target='_blank') nnm.Сборники
-            div.icontooinfo.a0Torrent1(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.nnmclub.to
             a(href='http://nnmclub.to/forum/index.php?c=16', target='_blank') nnm.Вся.Муз.
-            div.icontooinfo.a0Torrent1(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
